2009-05-13  Jan Schmidt  <thaytan@noraisin.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_element_msg_sync):
	Avoid a race with xoverlay interface discovery. Because the
	update_interface implementations function only searches for interfaces
	from the main gui thread, there's a race when the sync_msg comes in
	requesting an xid to embed and the xoverlay interface isn't available
	until the gui thread updates it.

	Avoid the race by using the sender of the message when it (as it
	always should) implements the GstXOverlay interface.

2009-05-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_uri_get_cached_subtitle_for_uri):
	Fix loading subtitles from the cache when the filename
	contains characters that need to be escaped (Closes: #582316)

2009-05-07  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(get_visualization_size): Remove unneeded
	assertion in recently reworked gst code

============ Version 2.27.1

2009-05-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.27.1

2009-05-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/Makefile.am: Fix build

2009-05-06  Bastien Nocera  <hadess@hadess.net>

	* COPYING:
	* README:
	* configure.in:
	* data/icons/scalable/totem.svg:
	* data/totem-video-thumbnailer.1:
	* data/totem-video-thumbnailer.pod:
	* data/totem.1:
	* src/backend/Makefile.am:
	* src/backend/bacon-video-widget-common.c:
	* src/backend/bacon-video-widget-common.h:
	* src/backend/bacon-video-widget-gst-0.10.c (bvw_error_msg),
	(bacon_video_widget_init), (bacon_video_widget_finalize),
	(bacon_video_widget_open), (bacon_video_widget_play),
	(bacon_video_widget_can_direct_seek),
	(bacon_video_widget_seek_time), (bacon_video_widget_close),
	(bacon_video_widget_pause), (get_visualization_size),
	(bacon_video_widget_is_seekable):
	* src/backend/bacon-video-widget-xine.c:
	* src/backend/bacon-video-widget.h:
	* src/backend/video-utils.c:
	* src/backend/video-utils.h: